--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -18,7 +18,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
 
 <link rel="stylesheet" href="/weather/GCWeb/css/ie8-theme.min.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<link rel="stylesheet" href="/cacheable/css/city/jquery-ui-1.10.3.custom.min.css">
 <script src="/weather/wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
