--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -1211,6 +1211,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <script src="/weather/wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
+<script src="/weather/template/gcweb/v4.0.22/js/theme.min.js"></script>
+<script src="/weather/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="/weather/cacheable/js/city/availableTags_e.min.js"></script>
+<script src="/weather/template/gcweb/v4.0.22/js/deps/jquery.dataTables.min.js"></script>
+<script src="/weather/cacheable/js/myprofile/alerts-1.0.min.js"></script>
+<script src="/weather/cacheable/js/myprofile/refresher-1.0.min.js"></script>
+<script type="text/javascript" src="/weather/city/js/cityjump.js"></script>
 <script src="/weather/GCWeb/js/theme.min.js"></script>
 </body>
 </html>
