--- a/radar/xft-index_e.html
+++ b/radar/xft-index_e.html
@@ -204,7 +204,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </script>
 <span class="image-container">
     <div id="animation-info" class="animation-info">PRECIPET - Rain - 2017-06-25, 09:10 EDT, 1/13</div>
-  <img src="/lib/radar/image.php?time=25-JUN-17+01.20.50.225145+PM&amp;site=XFT" alt="Radar Image" id="radar" class="img-responsive mrgn-bttm-md" usemap="#XFT" width="580" height="480"/>
+  <img src="/weather/radar/images/XFT-25-JUN-17-01.20.50.225145" alt="Radar Image" id="radar" class="img-responsive mrgn-bttm-md" usemap="#XFT" width="580" height="480"/>
 </span>
 <noscript>
   <p>Please enable JavaScript to view the animation.</p>
