--- a/radar/xft-index_e.html
+++ b/radar/xft-index_e.html
@@ -36,11 +36,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
 <!-- End Google Tag Manager -->
 	
-<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Weather - Environment Canada" href="/weather/rss/city/on-118_e.xml">
-<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Warning - Environment Canada" href="/weather/rss/warning/on-118_e.xml">
-<link rel="stylesheet" href="/weather/city/styles/city.css">
-<link rel="stylesheet" href="/weather/cacheable/css/city/city_js.css">
-<link rel="stylesheet" href="/weather/template/wxo/css/wxo.css" />
+<script type="text/javascript" src="/weather/cacheable/js/radar/Base.js"></script>
+
+<link rel="stylesheet" href="/weather/cacheable/css/radar/controller.css" />
+<link rel="stylesheet" href="/weather/cacheable/css/radar/radar2.css" />
 <ul id="wb-tphp">
 <li class="wb-slc">
 <a class="wb-sl" href="#wb-cont">Skip to main content</a>
