--- a/city/pages/on-118_metric_2_e.html
+++ b/city/pages/on-118_metric_2_e.html
@@ -1055,10 +1055,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <h2>Follow:</h2>
       <ul class="list-inline mrgn-tp-lg hidden-uuuuuuprint">
         <li>
-          <a href="/web/20170101123719/http://weather.gc.ca/rss/city/on-118_e.xml"><img src="/web/20170101123719im_/http://weather.gc.ca/cacheable/images/img/feed-icon-14x14.png" alt="Atom feed" class="mrgn-rght-sm">Weather</a>
+          <a href="/web/20170101123719/http://weather.gc.ca/rss/city/on-118_e.xml"><img src="/weather/cacheable/images/img/feed-icon-14x14.png" alt="Atom feed" class="mrgn-rght-sm">Weather</a>
         </li>
         <li>
-          <a href="/web/20170101123719/http://weather.gc.ca/rss/warning/on-118_e.xml"><img src="/web/20170101123719im_/http://weather.gc.ca/cacheable/images/img/feed-icon-14x14.png" alt="Atom feed" class="mrgn-rght-sm">Alerts</a>
+          <a href="/web/20170101123719/http://weather.gc.ca/rss/warning/on-118_e.xml"><img src="/weather/cacheable/images/img/feed-icon-14x14.png" alt="Atom feed" class="mrgn-rght-sm">Alerts</a>
         </li>
         <li class="twitter">
           <a href="https://web.archive.org/web/20170101123719/https://twitter.com/ECalerton118"><span class="mrgn-lft-sm">Alerts</span></a>
